--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,49 @@ code {
     monospace;
 }
 
+.app {
+  width: 80%;
+  padding: 20px;
+  margin: 0%;
+
+}
+
+.exchange {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url("/src/images/cryptoIMG.jpg");
+  background-size: cover;
+  color: white;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  padding: 0%; 
+  margin: 35px auto; 
+  width: 40%; 
+  height: 62%; 
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+}
+
 .imageCrypto {
   clip-path: circle(50% at 50% 50%);
+}
+
+.showInfo, .showPassword {
+  background-color: gold;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 20%;
+  margin-top: 8px;
+}
+
+.showInfo:hover{
+  opacity: 0,8;
+}
+
+.rate, .rateNoData, .symbolName {
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
