API fixed and creating .slice(0,5) crypto list

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url("/src/images/cryptoIMG.jpg");
+  background: url("/src/images/BlackBackgroundCrypto.jpg");
   background-size: cover;
   color: white;
   border: 1px solid #ffffff;
