--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,12 @@ code {
 .exchange {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  padding-left: 60px;
   background: url("/src/images/BlackBackgroundCrypto.jpg");
   background-size: cover;
-  color: white;
+  color: rgb(255, 255, 255);
   border: 1px solid #ffffff;
   border-radius: 10px;
   padding: 0%; 
@@ -36,6 +37,7 @@ code {
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
+  
 }
 
 .imageCrypto {
@@ -57,4 +59,42 @@ code {
 
 .rate, .rateNoData, .symbolName {
   font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
+
+
+.cryptoItem {
+  display: flex;
+  justify-content: start; /* Espacio entre el nombre y el precio */
+  flex-direction: row;
+  align-items: center;
+  width: 30%;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #535353;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+}
+
+
+.cryptoName {
+  display: flex;
+  justify-content: center; /* Espacio entre el nombre y el precio */
+  align-items: center;
+  width: 40%;
+  padding: 3px;
+  margin: 1px 0;
+  background-color: #031516;
+  border: 1px solid hsl(0, 0%, 87%);
+  border-radius: 5px;
+  color: rgb(123, 255, 0);
+  font-family:'Times New Roman', Times, serif
+}
+
+
+.cryptoPrice {
+  color: rgb(1, 3, 1);
+  font-size: 16px;
+  margin-left: 5px;
 }
