--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,44 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
+  }
+  
 .app {
   width: 80%;
   padding: 20px;
   margin: 0%;
+  
+}
 
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.showInfoBtn {
+  display: block;
+  background-color: gold;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 40%;
+  margin-top: 5px;
+}
+
+.displayText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .exchange {
@@ -44,14 +66,6 @@ code {
   clip-path: circle(50% at 50% 50%);
 }
 
-.showInfo, .showPassword {
-  background-color: gold;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 20%;
-  margin-top: 8px;
-}
 
 .showInfo:hover{
   opacity: 0,8;
