--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-image: url("/src/images/BlackBackgroundCrypto.jpg") ;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,17 +8,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
   }
 
-  code {
+
+code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
   }
-  
-.app {
-  width: 80%;
-  padding: 20px;
-  margin: 0%;
-  
-}
 
 .inputContainer {
   display: flex;
@@ -46,24 +41,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-left: 60px;
+  background-color: #2b2b2b;
   background: url("/src/images/BlackBackgroundCrypto.jpg");
-  background-size: cover;
-  color: rgb(255, 255, 255);
-  border: 1px solid #ffffff;
-  border-radius: 10px;
-  padding: 0%; 
-  margin: 35px auto; 
-  width: 40%; 
-  height: 62%; 
-  overflow: hidden;
-  position: relative;
-  box-sizing: border-box;
+  color: rgb(231, 231, 231);
+  height: 100vh;
   
 }
 
 .imageCrypto {
-  clip-path: circle(50% at 50% 50%);
+  clip-path: circle(45% at 50% 50%);
 }
 
 
@@ -77,14 +63,12 @@ body {
 }
 
 
-
-
 .cryptoItem {
   display: flex;
   justify-content: start; /* Espacio entre el nombre y el precio */
   flex-direction: row;
   align-items: center;
-  width: 30%;
+  width: 25%;
   padding: 1px;
   margin: 5px 0;
   background-color: #535353;
@@ -96,20 +80,21 @@ body {
 .cryptoName {
   display: flex;
   justify-content: center; /* Espacio entre el nombre y el precio */
-  align-items: center;
   width: 40%;
   padding: 3px;
   margin: 1px 0;
-  background-color: #031516;
+  margin-left: 3px;
+  margin-right: 3px;
+  background-color: #1a1a1a;
   border: 1px solid hsl(0, 0%, 87%);
   border-radius: 5px;
-  color: rgb(123, 255, 0);
+  color: gold;
   font-family:'Times New Roman', Times, serif
 }
 
 
 .cryptoPrice {
-  color: rgb(1, 3, 1);
+  color: rgb(0, 0, 0);
   font-size: 16px;
   margin-left: 5px;
 }
